--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading the Mind in the AI generated images</title>
-    <!--<link rel="stylesheet" href="style.css">-->
+    <script src="imageSets.js"></script>
+    <script src="script.js"></script>
     <style>
         body {
         font-family: Arial, sans-serif;
@@ -241,8 +242,5 @@
 
         </div>
     </div>
-
-<script src="imageSets.js"></script>
-<script src="script-claude3.js"></script>
 </body>
 </html>
