--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         border: none;
         cursor: pointer;
         font-size:10px;
+        background: grey;
     }
 
     #next-btn[enabled]:hover, #prev-btn[enabled]:hover {
@@ -154,6 +155,7 @@
      #next-btn[disabled], #prev-btn[disabled]{
         cursor:auto;
         color:black;
+        background: lightgrey;
     }
 
     #set-dropdown {
