end game state and timer countdown etc.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
         top: -2px;
     }
     .select2-container {
-    width: 540px !important; /* Replace 300px with whatever width you desire */
+        width: 540px !important;
+    }
 }
 
 </style>
@@ -235,8 +236,9 @@
         </div>
         <div id="choices-container"></div>
 
-        <div id="result-container"></div>
         <div id="score-container"></div>
+        <div id="result-container"></div>
+
 
     </div>
     <div id="bottom-container">
@@ -258,5 +260,9 @@
 
         </div>
     </div>
+</div>
+
+</div>
+
 </body>
 </html>
