--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Reading the Mind in the AI generated images</title>
     <link href="lib/select2.min.css" rel="stylesheet" />
     <script src="lib/jquery-3.6.0.min.js"></script>
@@ -10,7 +10,14 @@
     <script src="imageSets.js"></script>
     <script src="script.js"></script>
     <style>
-        body {
+
+    html, body {
+        height: 100%; /* Full height */
+        margin: 0; /* Remove default margin */
+        padding:0;
+    }
+
+    body {
         font-family: Arial, sans-serif;
         margin: 0;
         font-size: 16px;
@@ -219,7 +226,7 @@
         top: -2px;
     }
     .select2-container {
-        width: 540px !important;
+        width: 90% !important;
     }
 
     .choice-btn.excluded {
