--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
         box-sizing: border-box;
         display:flex;
     }
+
     #bottom-container {
-        margin-top: auto;
-        padding: 20px;
+        padding: 10px 20px;
         background-color: #f0f0f0;
-        display: grid;
-        grid-template-columns: 1fr auto;
-        align-items: center;
-        gap: 20px;
         position: fixed;
         bottom: 0;
         left: 0;
         right: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         box-sizing: border-box;
     }
 
@@ -71,9 +70,10 @@
     }
 
     #game-container {
-        max-width: 600px;
-        margin: 0 auto;
-        flex: 1 0 auto;
+         display: flex;
+        flex-direction: column;
+        justify-content: center;
+        max-height: calc(100vh - 40px); /* Adjust 40px based on the fixed bottom container's height */
         overflow-y: auto;
         padding: 20px;
         box-sizing: border-box;
@@ -81,14 +81,25 @@
     }
 
     #image-container {
-        text-align: center;
-        margin-bottom: 20px;
-        min-height:200px;
+        max-height: 70%;
+        overflow: hidden;
     }
 
     #image-container img {
-        max-width: 100%;
-        height: auto;
+        max-height: 100%;
+        width: auto;
+        display: block;
+        margin: 0 auto;
+    }
+
+    #below-image-container {
+        width: 100%;            /* Takes full width of its parent to utilize space */
+    display: flex;          /* Enables flexbox properties for its children */
+    flex-direction: column; /* Stacks children vertically */
+    align-items: center;    /* Aligns children horizontally in the center */
+    justify-content: center; /* Optionally center content vertically inside the container */
+    padding: 10px;          /* Padding around the content inside below-image-container */
+    box-sizing: border-box;
     }
 
     #choices-container {
@@ -96,7 +107,8 @@
         grid-template-columns: repeat(4, 1fr);
         gap: 10px;
         margin-bottom: 12px;
-         z-index: 100;
+        z-index: 100;
+        padding:10px;
     }
 
     .choice-btn {
@@ -104,14 +116,15 @@
         background-color: #f0f0f0;
         border: none;
         cursor: pointer;
+
         font-size:18px;
+        text-align:center;
     }
 
     .choice-btn:not([disabled]):hover {
         background-color: #e0e0e0;
     }
 
-    /* Correct button styling */
     .button-correct {
         background-color: green;
         color: white;
@@ -269,14 +282,12 @@
         <div id="image-container">
             <img id="question-image" src="" alt="Question Image">
         </div>
-        <div id="choices-container">
-
-        </div><div id="restore-button">Restore Answers</div>
-
-        <div id="score-container"></div>
-        <div id="result-container"></div>
-
-
+        <div id="below-image-container">
+            <div id="choices-container"></div>
+            <div id="restore-button">Restore Answers</div>
+            <div id="score-container"></div>
+            <div id="result-container"></div>
+        </div>
     </div>
     <div id="bottom-container">
         <div id="left-container">
@@ -294,7 +305,6 @@
                     <button id="next-btn" disabled>Next</button>
                 </div>
             <div id="question-number-container"></div>
-
         </div>
     </div>
 </div>
