--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        max-height: calc(100vh - 40px); /* Adjust 40px based on the fixed bottom container's height */
+        max-height: calc(100vh - 40px); /* to leave room for footer.*/
         overflow-y: auto;
         padding: 20px;
         padding-top:5px;
@@ -99,7 +99,6 @@
     }
 
     #image-container {
-        max-height: 70%;
         overflow: hidden;
     }
 
@@ -119,6 +118,7 @@
         justify-content: center; /* Optionally center content vertically inside the container */
         padding: 10px;          /* Padding around the content inside below-image-container */
         box-sizing: border-box;
+        min-height: 270px;
     }
 
     #choices-container {
